--- a/frontend/src/styles/PostList.css
+++ b/frontend/src/styles/PostList.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #686868;
     padding-bottom: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     animation: fadeIn 0.5s ease-in-out;
